--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-	<title>Anne Gulfan Castro | Web Designer, Director | anneyeeoong@yourdomain.com</title>
+	<title>Anne Gulfan Castro | Aspiring Software Developer | annecastro802@gmailcom</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<meta name="keywords" content="" />
@@ -21,15 +21,15 @@
 		<div id="hd">
 			<div class="yui-gc">
 				<div class="yui-u first">
-					<h1>Anne</h1>
-					<h2>Web Designer, Director</h2>
+					<h1>Anne Gulfan Castro</h1>
+					<h2>Aspiring Software Developer</h2>
 				</div>
 
 				<div class="yui-u">
 					<div class="contact-info">
 						<h3><a id="pdf" href="#">Download PDF</a></h3>
-						<h3><a href="mailto:name@yourdomain.com">name@yourdomain.com</a></h3>
-						<h3>(313) - 867-5309</h3>
+						<h3><a href="mailto:annecastro802@gmailcom">annecastro802@gmailcom</a></h3>
+						<h3>(+63) -999-924-6676 /h3>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -45,7 +45,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change. 
+								Passionate and highly competent in using in utilizing cross-platform ideas. Adept in html, java, css and etc. Humble, hardworking and always eager to learn. 
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -144,8 +144,8 @@
 							<h2>Education</h2>
 						</div>
 						<div class="yui-u">
-							<h2>Indiana University - Bloomington, Indiana</h2>
-							<h3>Dual Major, Economics and English &mdash; <strong>4.0 GPA</strong> </h3>
+							<h2>University of San Carlos - Talamban,Cebu, Philipppines</h2>
+							<h3>Computer Technology Major  &mdash; <strong>1.2.0 GPA</strong> </h3>
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -155,7 +155,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
+			<p>Anne Gulfan Castro &mdash; <a href="mailto:annecastro802@gmail.com">annecastro802@gmail.com</a> &mdash; (+63) - 999-924-6676</p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
