--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				<div class="yui-u">
 					<div class="contact-info">
 						<h3><a id="pdf" href="#">Download PDF</a></h3>
-						<h3><a href="mailto:annecastro802@gmailcom">annecastro802@gmailcom</a></h3>
-						<h3>(+63) -999-924-6676 /h3>
+						<h3><a href="mailto:annecastro802@gmailcom">annecastro802@gmailcom</a> </h3>
+						<h3>(+63) -999-924-6676 </h3>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -141,7 +141,7 @@
 
 					<div class="yui-gf last">
 						<div class="yui-u first">
-							<h2>Education</h2>
+							<h2> <strong>Education <strong></h2>
 						</div>
 						<div class="yui-u">
 							<h2>University of San Carlos - Talamban,Cebu, Philipppines</h2>
