--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 				<div class="yui-u">
 					<div class="contact-info">
+						<img src="Sanne.jpg" height="192px" width="192px" 
 						<h3><a id="pdf" href="#">Download PDF</a></h3>
 						<h3><a href="mailto:annecastro802@gmailcom">annecastro802@gmailcom</a> </h3>
 						<h3>(+63) -999-924-6676 </h3>
